--- a/styles/signup.css
+++ b/styles/signup.css
@@ -89,7 +89,7 @@ body {
 .arrow-link {
     position: absolute;
     left: -80px;
-    top: 32%;
+    top: 48%;
     transform: translateY(-50%);
 }
 
@@ -99,6 +99,8 @@ body {
 }
 
 .sgnp-h1 h1 {
+    font-size: 61px;
+    font-weight: 700;
     position: relative;
 }
 
@@ -350,12 +352,10 @@ body {
     align-items: center;
     width: 100%;
     height: 48px;
-    /* position: relative; 
-    top: 80px;*/
-
-    margin-top: 80px;
-
+    position: absolute;
+    bottom: 8px;
 }
+
 
 .priv-polce-legl-note {
     display: flex;
@@ -388,16 +388,6 @@ body {
     height: 100vh;
 }
 
-.backdrop {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.3);
-    z-index: 0;
-}
-
 .d-none {
     display: none;
 }
@@ -416,7 +406,25 @@ body {
         width: 88%;
 
     }
+
+    .arrow-link {
+        left: 2px;
+    }
 }
+
+@media screen and (427px <=width) {
+    .arrow-link {
+        left: -64px;
+    }
+}
+
+@media screen and (520px <=width) {
+    .arrow-link {
+        left: -48px;
+    }
+}
+
+
 
 @media screen and (width <=640px) {
     .signup-content {
@@ -427,7 +435,8 @@ body {
     .email-wrapper,
     .pw-wrapper,
     .rep-pw-wrapper,
-    #loginForm, #error {
+    #loginForm,
+    #error {
         width: 92%;
 
     }
