--- a/styles/contactSection/contacts_style.css
+++ b/styles/contactSection/contacts_style.css
@@ -238,6 +238,22 @@
   background-color: #2a3647;;
 }
 
+.edit-contact-btn-responsive{
+  cursor: pointer;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 24px;
+  bottom: 100px;
+  height: 56px;
+  width: 56px;
+  border-radius: 50%;
+  background-color: #2a3647;;
+}
+
+
+
 @media(max-width: 1000px) {
 
   .add-contact-btn {
@@ -341,3 +357,4 @@
     padding-bottom: 32px;
   }
 }
+
