fixed responsive button

--- a/styles/contactSection/contacts_style.css
+++ b/styles/contactSection/contacts_style.css
@@ -276,7 +276,7 @@
 }
 
 .edit-delete-btn-responsive {
-  position: absolute;
+  position: fixed;
   background: white;
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
