--- a/styles/style_task_card_overlay.css
+++ b/styles/style_task_card_overlay.css
@@ -64,7 +64,7 @@
   font-size: 20px;
 }
 
-.badge {
+.badge-user-story {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -72,9 +72,22 @@
   color: white;
   padding: 5px 10px;
   border-radius: 6px;
-  font-size: 14px;
-  font-weight: bold;
-  width: 164px;
+  font-size: 23px;
+  width: fit-content;
+  height: 36px;
+  border-radius: 8px;
+}
+
+.badge-technical-task {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1FD7C1;
+  color: white;
+  padding: 4px 24px ;
+  border-radius: 6px;
+  font-size: 23px;
+  width: fit-content;
   height: 36px;
   border-radius: 8px;
 }
@@ -85,21 +98,28 @@
 }
 
 .card-description {
-  color: #555;
+  color: #000000;
   max-height: 200px;
   min-height: 50px;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-wrap: break-word;
+}
+
+.description-span {
+  font-size: 20px;
 }
 
 .card-due-date,
 .card-priority {
-  font-size: 14px;
-  margin-bottom: 10px;
+  font-size: 20px !important;
   display: flex;
   align-items: center;
   gap: 15px;
+}
+
+.priority-span {
+  font-size: 20px;
 }
 
 .priority-span {
@@ -117,6 +137,7 @@
 .assignee {
   display: flex;
   align-items: center;
+  gap: 16px;
   margin: 5px 0;
   width: 445;
   height: 56;
@@ -125,11 +146,12 @@
   padding-right: 16px;
   padding-bottom: 7px;
   padding-left: 16px;
+  font-size: 19px;
 }
 
 .avatar {
-  width: 28px;
-  height: 28px;
+  width: 42px;
+  height: 42px;
   border-radius: 50%;
   display: inline-flex;
   justify-content: center;
@@ -137,13 +159,12 @@
   color: white;
   font-size: 14px;
   font-weight: 250;
-  margin-right: 8px;
 }
 
 .card-subtasks {
   display: flex;
   flex-direction: column;
-  margin: 15px 0;
+  margin: 0;
   gap: 8px;
 }
 
@@ -158,7 +179,6 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  margin-top: 15px;
 }
 
 .card-actions div {
@@ -214,11 +234,21 @@
 @media(max-width: 625px) {
   .task-card {
     width: 396px;
-    padding: 32px 24px;
+    padding: 16px 16px;
+    gap: 8px;
   }
 
   .task-card h2 {
-    font-size: 36px;
+    font-size: 32px;
+    line-height: 40px;
+  }
+
+  .badge-technical-task {
+    font-size: 16px;
+  }
+
+  .badge-user-story {
+    font-size: 16px;
   }
 
   .avatar {
@@ -228,5 +258,63 @@
 
   .show {
     overflow: auto;
+  }
+}
+
+@media(max-width: 450px) {
+  .task-card {
+    width: 300px;
+  }
+
+  .content-right {
+    padding-bottom: 80px;
+  }
+
+  #task-card-overlay {
+    padding-bottom: 80px;
+  }
+
+  .avatar {
+    width: 24px;
+    height: 24px;
+    font-size: 10px;
+  }
+
+  .card-due-date {
+    margin: 0;
+  }
+
+  strong {
+    font-size: 16px !important;
+  }
+
+  .card-priority {
+    margin: 0;
+  }
+
+  .card-subtasks {
+    margin: 0;
+  }
+
+  .assignee {
+    margin: 0;
+    font-size: 14px;
+  }
+
+  .card-description {
+    height: fit-content;
+    min-height: 0px;
+  }
+
+  .description-span {
+    font-size: 14px;
+  }
+
+  .card-due-date {
+    font-size: 14px !important;
+  }
+
+  .priority-span {
+    font-size: 14px;
   }
 }
