--- a/styles/style_task_card_overlay.css
+++ b/styles/style_task_card_overlay.css
@@ -236,7 +236,7 @@
     width: 396px;
     padding: 18px;
     gap: 16px;
-
+    border-radius: 24px;
   }
 
   .task-card h2 {
@@ -265,6 +265,7 @@
 @media(max-width: 450px) {
   .task-card {
     width: 300px;
+    border-radius: 18px;
   }
 
   .content-right {
