--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -639,9 +639,15 @@ textarea {
     align-items: center;
   }
 
+  /* .add-task-header-and-wrapper{
+    overflow:auto;
+  } */
+
   .addTask-footer {
     display: flex;
     justify-content: space-between;
+    /* flex-direction: column;
+    gap:40px; */
 
     span {
       display: none;
