--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -595,6 +595,10 @@ textarea {
   background-color: #c9cdd3;
 }
 
+.requiredResponsiveSpan{
+  display: none;
+}
+
 @media(max-width:999px) {
   .addTask-wrapper {
     flex-direction: column;
@@ -691,9 +695,13 @@ textarea {
 
 
 
-  /* .addTask-footer span {
+   .addTask-footer span {
       display: none;
-  } */
+  } 
+  .requiredResponsiveSpan{
+    display: block;
+    padding-bottom: 16px;
+  }
 
   .mobile-nav-section {
       z-index: 101; /* Ensure mobile navbar stays on top */
@@ -705,15 +713,17 @@ textarea {
     align-items: center;
     gap: 16px;
     padding-bottom: 8px;
+    scale:0.9;
 }
 
 .subtask-list {
   position: relative;
   width: 100%;
   height: fit-content;
+  max-height: 100px;
   /* border: 2px dashed #054483; */
   overflow-y: auto;
   word-break: break-word;
-  top: -13%;
+  top: -5%;
 }
 }
