--- a/styles/login.css
+++ b/styles/login.css
@@ -19,7 +19,6 @@ body {
     overflow: hidden;
     background-color: #F6F7F8;
 
-
 }
 
 /*   :::::::   content wrapper   :::::::   */
@@ -32,7 +31,9 @@ body {
     width: 96vw;
     max-width: 1440px;
     height: auto;
-    min-height: 96%;
+    min-height: 880px;
+    /* height: auto;
+    min-height: 96%; */
     position: relative;
     overflow: hidden;
 }
@@ -434,38 +435,6 @@ body {
 }
 
 /*   :::::::   media query  :::::::   */
-@media screen and (320px < width < 428px) {
-
-    .backdrop {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        background-color: rgba(0, 0, 0, 1);
-        z-index: 0;
-    }
-
-    .login-content {
-        width: 88%;
-    }
-
-    .email-wrapper,
-    .pw-wrapper,
-    #loginForm {
-        width: 88%;
-
-    }
-
-    #Ebene_1 g path[fill="#2A3647"] {
-        /* fill: #2A3647; */
-        /* fill: #FFFFFF; */
-        animation: color-change 2s forwards;
-        animation-duration: 2.4s;
-        animation-delay: 1.6s;
-        animation-timing-function: ease-in-out;
-    }
-}
 
 @media screen and (width < 640px) {
     .login-content {
@@ -521,4 +490,42 @@ body {
         animation-timing-function: ease-in-out;
     }
 
+}
+
+@media screen and (320px < width < 428px) {
+
+    .backdrop {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 1);
+        z-index: 0;
+    }
+
+    .login-content {
+        width: 88%;
+    }
+
+    .email-wrapper,
+    .pw-wrapper,
+    #loginForm {
+        width: 88%;
+
+    }
+
+    #Ebene_1 g path[fill="#2A3647"] {
+        /* fill: #2A3647; */
+        /* fill: #FFFFFF; */
+        animation: color-change 2s forwards;
+        animation-duration: 2.4s;
+        animation-delay: 1.6s;
+        animation-timing-function: ease-in-out;
+    }
+
+    .nau-sign-up-box {
+        top: 680px;
+
+    }
 }
