--- a/styles/login.css
+++ b/styles/login.css
@@ -144,6 +144,7 @@ body {
     animation-duration: 1s;
     animation-delay: 2s;
     animation-timing-function: ease-in-out;
+    /* animation-iteration-count: 2 */
     z-index: 999;
 }
 
@@ -481,6 +482,20 @@ body {
         top: 720px;
     }
 
+    .backdrop {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 1);
+        z-index: 0;
+    }
+    #Ebene_1 g path[fill="#2A3647"] {
+        fill: #FFFFFF;
+        
+    }
+
     #Ebene_1 g path[fill="#2A3647"] {
         /* fill: #2A3647; */
         /* fill: #FFFFFF; */
@@ -513,6 +528,11 @@ body {
     #loginForm {
         width: 88%;
 
+    }
+
+    #Ebene_1 g path[fill="#2A3647"] {
+        fill: #FFFFFF;
+        
     }
 
     #Ebene_1 g path[fill="#2A3647"] {
