--- a/styles/login.css
+++ b/styles/login.css
@@ -140,13 +140,20 @@ body {
     display: flex;
     justify-content: center;
     background: transparent;
+    /* animation: shrink-move forwards;
+    animation-duration: 1s;
+    animation-delay: 2s;
+    animation-timing-function: ease-in-out; */
+    /* animation-iteration-count: 2 */
+    z-index: 999;
+}
+
+.p1-logo.animate {
     animation: shrink-move forwards;
     animation-duration: 1s;
     animation-delay: 2s;
     animation-timing-function: ease-in-out;
-    /* animation-iteration-count: 2 */
-    z-index: 999;
-}
+  }
 
 #Ebene_1 {
     width: 120px;
