added responsive join logo to all htmls

--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -638,7 +638,7 @@ textarea {
 
 @media(max-width:570px) {
   .header {
-      justify-content: flex-end !important;
+      /* justify-content: flex-end !important; */
   }
 
   .header p {
