--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -167,14 +167,24 @@ span {
   align-items: center;
 }
 
-.profile_picture {
+.user-icon {
+  cursor: pointer;
+  color: #29abe2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
   border: 3px solid rgb(43, 54, 71);
-  /* background-color: rgb(246, 248, 250); */
-  width: 50px;
-  height: 50px;
+  width: 56px;
+  height: 56px;
   border-radius: 50%;
   object-fit: cover;
   object-position: center;
+}
+
+.user-icon:hover {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .profile_picture:hover {
