--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -534,6 +534,10 @@ textarea {
   scale: 1.1;
 }
 
+.category-input {
+  z-index: 10;
+}
+
 .subtask-edit-input {
   position: relative !important;
   top: -15% !important;
@@ -561,7 +565,7 @@ textarea {
   height: 100px;
   width: 100%;
   position: relative;
-  top: -55%;
+  top: -67%;
   background-color: white;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -586,6 +590,12 @@ textarea {
   display: none;
 }
 
+@media (max-width: 1350px) {
+  .content-right-wrapper {
+    padding-bottom: 100px;
+  }
+}
+
 @media(max-width:999px) {
   .addTask-wrapper {
     flex-direction: column;
@@ -600,18 +610,31 @@ textarea {
     }
   }
 
+  .category-dropdown {
+    top: -70%;
+  }
+
   .addTask-footer {
     display: flex;
     justify-content: space-between;
     position: fixed;
-    bottom: 79px;
+    bottom: 80px;
     left: 0;
     right: 0;
-    padding: 16px;
+    padding: 12px 16px;
     z-index: 100;
     width: 100%;
     background-color: #f6f7f8;
-    padding-top: 0;
+  }
+
+  .addTask-footer span {
+    display: none;
+  }
+
+  .requiredResponsiveSpan {
+    display: block;
+    padding-bottom: 16px;
+    transform: translateY(-32px);
   }
 
   .addTask-subtasks {
@@ -644,6 +667,10 @@ textarea {
     display: none;
   }
 
+  .category-dropdown {
+    top: -66%;
+  }
+
   .content-wrapper {
     overflow: auto;
   }
@@ -668,7 +695,6 @@ textarea {
     bottom: 65px;
     left: 0;
     right: 0;
-    padding: 16px;
     z-index: 100;
     width: 100%;
     background-color: #f6f7f8;
@@ -683,15 +709,10 @@ textarea {
     padding-bottom: 140px;
   }
 
-
-
-  .addTask-footer span {
-    display: none;
-  }
-
   .requiredResponsiveSpan {
     display: block;
     padding-bottom: 16px;
+    transform: translateY(0);
   }
 
   .mobile-nav-section {
