--- a/styles/board.css
+++ b/styles/board.css
@@ -200,6 +200,7 @@ body {
   cursor: pointer;
   padding: 16px;
   border: none;
+  min-width: 240px;
   border-radius: 24px;
   max-height: fit-content;
   display: flex;
