--- a/styles/signup.css
+++ b/styles/signup.css
@@ -359,7 +359,7 @@ body {
 }
 
 
-.priv-polce-legl-note {
+.prvt-polce-legl-note {
     display: flex;
     justify-content: center;
     align-items: center;
