--- a/styles/style_task_card_overlay.css
+++ b/styles/style_task_card_overlay.css
@@ -168,12 +168,69 @@
   gap: 8px;
 }
 
+/* ::: alte version
 .subtasks label {
   display: flex;
   align-items: center;
   margin: 5px 0;
   font-size: 14px;
+} */
+
+/*   :::::::   custom checkbox subtasks   :::::::    */
+.subtask-wrapper {
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
 }
+
+.subtask-wrapper label {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin: 5px 0;
+  font-size: 14px;
+}
+
+.subtask-wrapper input[type='checkbox'] {
+  cursor: pointer;
+  opacity: 0;
+  position: absolute;
+
+}
+
+.subtask-wrapper label::before {
+  content: url('../assets/svg/box-unchecked.svg');
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  border-radius: .15em;
+  margin-right: .5em;
+  cursor: pointer;
+}
+
+.subtask-wrapper label:hover::before,
+.subtask-wrapper input[type="checkbox"]:hover+label::before,
+.subtask-wrapper input[type="checkbox"]:focus+label::before {
+  box-shadow: 0px 4px 4px 0px #00000040;
+  background: #EDF2FA;
+
+}
+
+.subtask-wrapper input[type="checkbox"]:checked+label::before {
+  content: url('../assets/svg/box-checked.svg');
+  width: 1em;
+  height: 1em;
+  border: none;
+}
+
+.sbtsk-chb {
+  width: 20px !important;
+  height: 20px !important;
+  margin-right: 10px !important;
+}
+
+/* ::: custom chekbox ende :::   */
+
 
 .card-actions {
   display: flex;
@@ -231,6 +288,7 @@
   word-break: break-word;
 }
 
+/*  :::::::  media queries  :::::::  */
 @media(max-width: 625px) {
   .task-card {
     width: 396px;
